Simplify the standard dartboard implementation